[gd_scene format=3 uid="uid://c5q3tyeey30wn"]

[ext_resource type="Script" uid="uid://dib7e53vbm7lb" path="res://scripts/main_menu.gd" id="1_oa1go"]
[ext_resource type="Texture2D" uid="uid://cmhg7j2iirla6" path="res://assets/inn-button.png" id="2_tbmy8"]
[ext_resource type="Texture2D" uid="uid://cavqtr0xl2im7" path="res://assets/inn-button-pressed.png" id="3_jk1qb"]
[ext_resource type="Texture2D" uid="uid://oopvslay7y0l" path="res://assets/battle-button.png" id="4_5dd4i"]
[ext_resource type="Texture2D" uid="uid://itxuhat4mc5n" path="res://assets/battle-button-pressed.png" id="5_lgwnu"]
[ext_resource type="Texture2D" uid="uid://cor1nu4kh10wb" path="res://assets/options-button.png" id="6_flqon"]
[ext_resource type="Texture2D" uid="uid://ce43g60hla20a" path="res://assets/options-button-pressed.png" id="7_rcqid"]

[node name="MainMenu" type="Node2D" unique_id=358214392]
script = ExtResource("1_oa1go")

[node name="TopButtons" type="Node2D" parent="." unique_id=1988332975]

[node name="InnButton" type="TextureButton" parent="TopButtons" unique_id=1251949227]
offset_left = 75.0
offset_top = 29.0
offset_right = 331.0
offset_bottom = 285.0
focus_neighbor_right = NodePath("../BattleButton")
texture_normal = ExtResource("2_tbmy8")
texture_pressed = ExtResource("3_jk1qb")
texture_focused = ExtResource("3_jk1qb")

[node name="BattleButton" type="TextureButton" parent="TopButtons" unique_id=496288987]
offset_left = 461.0
offset_top = 26.0
offset_right = 717.0
offset_bottom = 282.0
focus_neighbor_left = NodePath("../InnButton")
focus_neighbor_right = NodePath("../OptionsButton")
texture_normal = ExtResource("4_5dd4i")
texture_pressed = ExtResource("5_lgwnu")
texture_focused = ExtResource("5_lgwnu")

[node name="OptionsButton" type="TextureButton" parent="TopButtons" unique_id=230063202]
offset_left = 854.0
offset_top = 32.0
offset_right = 1110.0
offset_bottom = 288.0
focus_neighbor_left = NodePath("../BattleButton")
texture_normal = ExtResource("6_flqon")
texture_pressed = ExtResource("7_rcqid")
texture_focused = ExtResource("7_rcqid")

[node name="InnButtons" type="Node2D" parent="." unique_id=1128162461]
visible = false

[node name="NewHunterButton" type="Button" parent="InnButtons" unique_id=1342885122]
offset_left = 478.0
offset_top = 15.0
offset_right = 681.0
offset_bottom = 132.0
text = "New Hunter"

[node name="RetireButton" type="Button" parent="InnButtons" unique_id=1911232632]
offset_left = 484.0
offset_top = 263.0
offset_right = 683.0
offset_bottom = 376.0
text = "Retire Hunter"

[node name="TrainRestButton" type="Button" parent="InnButtons" unique_id=2094699989]
offset_left = 48.0
offset_top = 16.0
offset_right = 423.0
offset_bottom = 383.0
text = "Train/Rest"

[node name="ShopButton" type="Button" parent="InnButtons" unique_id=585752983]
offset_left = 738.0
offset_top = 12.0
offset_right = 1121.0
offset_bottom = 382.0
text = "Shop"

[node name="RecruitButton" type="Button" parent="InnButtons" unique_id=1993084360]
offset_left = 484.0
offset_top = 139.0
offset_right = 679.0
offset_bottom = 256.0
text = "Recruit Hunter"

[node name="ShopMenu" type="Node2D" parent="." unique_id=1034695970]
visible = false

[connection signal="pressed" from="TopButtons/InnButton" to="." method="_on_inn_button_pressed"]
[connection signal="pressed" from="TopButtons/BattleButton" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="TopButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="InnButtons/NewHunterButton" to="." method="_on_new_hunter_button_pressed"]
[connection signal="pressed" from="InnButtons/RetireButton" to="." method="_on_retire_button_pressed"]
[connection signal="pressed" from="InnButtons/TrainRestButton" to="." method="_on_train_rest_button_pressed"]
[connection signal="pressed" from="InnButtons/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="InnButtons/RecruitButton" to="." method="_on_recruit_button_pressed"]
